--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a4064560",
+   "id": "0c8aff49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3ed60dc6",
+   "id": "8966f29d",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c3054a55",
+   "id": "084b50ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2b3fa6dd",
+   "id": "2a18cb75",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "582156b0",
+   "id": "267de5d9",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5cb9ca34",
+   "id": "6f6ee3e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "67f9059f",
+   "id": "a2964efb",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ff11fdfa",
+   "id": "a2ee32df",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "524b4453",
+   "id": "e17c9678",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4955a012",
+   "id": "7439c20f",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "06b7821b",
+   "id": "9a8648c0",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3ec975df",
+   "id": "713ff7f4",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6eb84315",
+   "id": "c0322c98",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "aa7cba38",
+   "id": "1b61baea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2b00d559",
+   "id": "4b26ce3f",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "907e1e83",
+   "id": "2a73b731",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06ad5dd7",
+   "id": "8c565363",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a1aba537",
+   "id": "92440be8",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2ef3e0f5",
+   "id": "01eb87ee",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "973b953d",
+   "id": "13e84504",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2e79f5a6",
+   "id": "2ffed74e",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3a6eb296",
+   "id": "452da544",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f396d44f",
+   "id": "cae8f44f",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d855c3f2",
+   "id": "761d08e6",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "20a2c67c",
+   "id": "6a2d397d",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2cf6bb92",
+   "id": "98d14df6",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "bab2c915",
+   "id": "257ea1af",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8067a50f",
+   "id": "d05d9cb0",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d6c21df9",
+   "id": "8e1f7d4e",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8a8f6852",
+   "id": "d98c54ba",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "05c8dabe",
+   "id": "6207d774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "c46c6e0e",
+   "id": "0b2c62d1",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "d6fa73c2",
+   "id": "bf126da2",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "07b3766a",
+   "id": "4b06dc54",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "720f808a",
+   "id": "c49e9036",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "d27062d8",
+   "id": "aa9453f6",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "9bff5b91",
+   "id": "3327113e",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "f5731ae0",
+   "id": "6b8ecad0",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "5139e1bb",
+   "id": "3ab0fe06",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "367142e7",
+   "id": "3c88af2b",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "59e42f2f",
+   "id": "a50445de",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "42c277f5",
+   "id": "1f58b5cc",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "12f051a3",
+   "id": "f64e628f",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "ee072eef",
+   "id": "11e38f54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,29 +969,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "8ad60087",
+   "execution_count": 137,
+   "id": "dff98cc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'etre vivant', 'mamifere'}"
+       "{'bipede', 'mamifere'}"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "homme.intersection(chien)"
+    "homme.difference(reptile)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08315851",
+   "id": "8998f492",
    "metadata": {},
    "outputs": [],
    "source": []
