--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0c8aff49",
+   "id": "a2a22d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8966f29d",
+   "id": "75f8d6a3",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "084b50ba",
+   "id": "c4dbef7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2a18cb75",
+   "id": "a7f01c69",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "267de5d9",
+   "id": "a461bf08",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6f6ee3e4",
+   "id": "c351736d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a2964efb",
+   "id": "8c574c08",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a2ee32df",
+   "id": "f5dc112e",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e17c9678",
+   "id": "44ffe14d",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7439c20f",
+   "id": "47321af9",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9a8648c0",
+   "id": "56775098",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "713ff7f4",
+   "id": "44771bb8",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c0322c98",
+   "id": "5f0b80d5",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1b61baea",
+   "id": "e43acc3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4b26ce3f",
+   "id": "05080ffa",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a73b731",
+   "id": "bbe00c63",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c565363",
+   "id": "dea053e1",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "92440be8",
+   "id": "3a101ec4",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "01eb87ee",
+   "id": "9f307abf",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13e84504",
+   "id": "0d322a01",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2ffed74e",
+   "id": "72b65374",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "452da544",
+   "id": "f25428fb",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "cae8f44f",
+   "id": "dfffd8dc",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "761d08e6",
+   "id": "9eba4251",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "6a2d397d",
+   "id": "2201e84f",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "98d14df6",
+   "id": "bf406d9f",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "257ea1af",
+   "id": "6d3e9e27",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d05d9cb0",
+   "id": "5ef4a7ee",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "8e1f7d4e",
+   "id": "6abe7a53",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "d98c54ba",
+   "id": "26506de0",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "6207d774",
+   "id": "c7a362ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0b2c62d1",
+   "id": "87b6b582",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "bf126da2",
+   "id": "ae052e27",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "4b06dc54",
+   "id": "400a6640",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "c49e9036",
+   "id": "523e8c90",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "aa9453f6",
+   "id": "75c77ec5",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "3327113e",
+   "id": "62a19342",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "6b8ecad0",
+   "id": "fcbb2bf8",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "3ab0fe06",
+   "id": "fc8401cd",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "3c88af2b",
+   "id": "507486a3",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "a50445de",
+   "id": "94326318",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "1f58b5cc",
+   "id": "c6e9126f",
    "metadata": {},
    "outputs": [
     {
@@ -938,39 +938,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "f64e628f",
+   "execution_count": 142,
+   "id": "248add7f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3}\n"
+      "{1, 2, 3, ('riri', 'fifi', 'loulou')}\n"
      ]
     }
    ],
    "source": [
-    "my_set = set([3, 1, 1, 2, 3])\n",
+    "my_set = set([3, 1, 1, 2, 3, (\"riri\", \"fifi\", \"loulou\")])\n",
     "print(my_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "11e38f54",
+   "execution_count": 138,
+   "id": "4a48f8a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "homme = set([\"bipede\", \"mamifere\", \"etre vivant\", \"omnivore\"])\n",
     "reptile = set([\"4 pattes\", \"etre vivant\", \"omnivore\"])\n",
-    "chien = set([\"4 pattes\", \"mamifere\", \"etre vivant\", \"fourure\"])\n"
+    "chien = set([\"4 pattes\", \"mamifere\", \"etre vivant\", \"fourure\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "dff98cc7",
+   "execution_count": 139,
+   "id": "81e364c3",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
        "{'bipede', 'mamifere'}"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8998f492",
+   "id": "f499dc8e",
    "metadata": {},
    "outputs": [],
    "source": []
