--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92f30217",
+   "id": "37c7235d",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f1b9c758",
+   "id": "efcc750d",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5295c6a4",
+   "id": "15161e56",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1278893f",
+   "id": "9de785df",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c01a3d82",
+   "id": "f9a8873c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c3e5aab1",
+   "id": "f51c4fe1",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "911e3876",
+   "id": "c76b33a8",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "9acd31eb",
+   "id": "3e38634c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9638b7ab",
+   "id": "392f6277",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "390d135e",
+   "id": "892d65bd",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -249,6 +249,9 @@
     "        * permettent de stocker des clés avec des valeurs associées\n",
     "        * les clés ne peuvent pas être dupliquées\n",
     "        * la recherche d'une clé dans un dictionnaire est \"facile / rapide\" car il possède une structure inerne \n",
+    "    * les `set` (ensemble)\n",
+    "        * permmettent de stocker un ensemble de données sans doublons (penser qu'il s'agit d'un dictionnaire ave)\n",
+    "        * ne peuvent contenir que des éléments immutables\n",
     "    \n",
     "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]"
    ]
@@ -256,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f41c1be4",
+   "id": "e8103cdf",
    "metadata": {},
    "outputs": [],
    "source": []
