--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37c7235d",
+   "id": "dfe0c513",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "efcc750d",
+   "id": "10fb17f9",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "15161e56",
+   "id": "e9c11ee6",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "9de785df",
+   "id": "67891432",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f9a8873c",
+   "id": "4b06f7f1",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f51c4fe1",
+   "id": "cc5ce470",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c76b33a8",
+   "id": "a6a041e9",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3e38634c",
+   "id": "ec9a6c96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "392f6277",
+   "id": "a22bd283",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "892d65bd",
+   "id": "3d75dad4",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -250,8 +250,8 @@
     "        * les clés ne peuvent pas être dupliquées\n",
     "        * la recherche d'une clé dans un dictionnaire est \"facile / rapide\" car il possède une structure inerne \n",
     "    * les `set` (ensemble)\n",
-    "        * permmettent de stocker un ensemble de données sans doublons (penser qu'il s'agit d'un dictionnaire ave)\n",
-    "        * ne peuvent contenir que des éléments immutables\n",
+    "        * permmettent de stocker un ensemble de données sans doublons (penser qu'il s'agit d'un dictionnaire avec uniquement des clés) => ne peuvent contenir que des éléments immutables\n",
+    "        * permettent de faire facilement et de façon performante \n",
     "    \n",
     "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]"
    ]
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8103cdf",
+   "id": "813f4196",
    "metadata": {},
    "outputs": [],
    "source": []
