--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dfe0c513",
+   "id": "9eaa24ad",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "10fb17f9",
+   "id": "1746a8f7",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e9c11ee6",
+   "id": "feb01e0b",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "67891432",
+   "id": "ef4b5fef",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4b06f7f1",
+   "id": "e6a781b8",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cc5ce470",
+   "id": "218cba6e",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "a6a041e9",
+   "id": "04781969",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ec9a6c96",
+   "id": "32c561f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a22bd283",
+   "id": "e95e5a57",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d75dad4",
+   "id": "48f8577b",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -251,7 +251,7 @@
     "        * la recherche d'une clé dans un dictionnaire est \"facile / rapide\" car il possède une structure inerne \n",
     "    * les `set` (ensemble)\n",
     "        * permmettent de stocker un ensemble de données sans doublons (penser qu'il s'agit d'un dictionnaire avec uniquement des clés) => ne peuvent contenir que des éléments immutables\n",
-    "        * permettent de faire facilement et de façon performante \n",
+    "        * permettent de faire facilement et de façon performante des opérations ensemblistes (union de 2 sets, différences, ...)\n",
     "    \n",
     "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]"
    ]
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "813f4196",
+   "id": "1f2e6eb2",
    "metadata": {},
    "outputs": [],
    "source": []
