--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9eaa24ad",
+   "id": "bc90003b",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1746a8f7",
+   "id": "09c305ed",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "feb01e0b",
+   "id": "87d32493",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ef4b5fef",
+   "id": "997c5596",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e6a781b8",
+   "id": "08c3a901",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "218cba6e",
+   "id": "c290164b",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "04781969",
+   "id": "cde87cbf",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "32c561f4",
+   "id": "50a89482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e95e5a57",
+   "id": "689042a2",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f8577b",
+   "id": "2f94af76",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -253,13 +253,17 @@
     "        * permmettent de stocker un ensemble de données sans doublons (penser qu'il s'agit d'un dictionnaire avec uniquement des clés) => ne peuvent contenir que des éléments immutables\n",
     "        * permettent de faire facilement et de façon performante des opérations ensemblistes (union de 2 sets, différences, ...)\n",
     "    \n",
-    "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]"
+    "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]\n",
+    "\n",
+    "## Après-midi\n",
+    "\n",
+    "* manipulation d'API w"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2e6eb2",
+   "id": "e8133b59",
    "metadata": {},
    "outputs": [],
    "source": []
