--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -1,6 +1,43 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adeb896d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# JSON\n",
+    "\n",
+    "ma_structure = {\n",
+    "    \"nom\": \"Python objet\"\n",
+    "    \"stagiaires\" : [\n",
+    "        \"Joel\", \"Blanche\"\n",
+    "    ], \n",
+    "    \"formateur\": \"Matthieu\"\n",
+    "}"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.9"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
