--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bc90003b",
+   "id": "948e2769",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "09c305ed",
+   "id": "20b0863d",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "87d32493",
+   "id": "ef3ec161",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "997c5596",
+   "id": "b562d2b4",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "08c3a901",
+   "id": "1197bfdd",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c290164b",
+   "id": "30beef82",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "cde87cbf",
+   "id": "45f2d44e",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "50a89482",
+   "id": "3382f64f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "689042a2",
+   "id": "11dc7def",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f94af76",
+   "id": "63326962",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -257,13 +257,14 @@
     "\n",
     "## Après-midi\n",
     "\n",
-    "* manipulation d'API w"
+    "* manipulation d'API REST\n",
+    "* manipulation de JSON / CSV "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8133b59",
+   "id": "1a56ab33",
    "metadata": {},
    "outputs": [],
    "source": []
