--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -2,21 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "adeb896d",
+   "execution_count": 4,
+   "id": "9e9865f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# JSON\n",
     "\n",
     "ma_structure = {\n",
-    "    \"nom\": \"Python objet\"\n",
+    "    \"nom\": \"Python objet\",\n",
     "    \"stagiaires\" : [\n",
     "        \"Joel\", \"Blanche\"\n",
     "    ], \n",
     "    \"formateur\": \"Matthieu\"\n",
-    "}"
+    "}\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "mon_objet_en_chaine = json.dumps(ma_structure)\n",
+    "json.dump?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab48caf2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
