--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9e9865f4",
+   "execution_count": 7,
+   "id": "e785e165",
    "metadata": {},
    "outputs": [],
    "source": [
     "# JSON\n",
+    "import json\n",
     "\n",
     "ma_structure = {\n",
     "    \"nom\": \"Python objet\",\n",
@@ -17,16 +18,25 @@
     "    \"formateur\": \"Matthieu\"\n",
     "}\n",
     "\n",
-    "import json\n",
     "\n",
     "mon_objet_en_chaine = json.dumps(ma_structure)\n",
-    "json.dump?"
+    "json.dump(ma_structure, open(\"donnees.json\", \"w\"), indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "34c479ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_depuis_le_fichier = json.load(open(\"donnees.json\", \"r\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab48caf2",
+   "id": "34768898",
    "metadata": {},
    "outputs": [],
    "source": []
