--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e785e165",
+   "execution_count": 13,
+   "id": "1b72242c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joel\n"
+     ]
+    }
+   ],
    "source": [
     "# JSON\n",
     "import json\n",
@@ -19,24 +27,35 @@
     "}\n",
     "\n",
     "\n",
-    "mon_objet_en_chaine = json.dumps(ma_structure)\n",
-    "json.dump(ma_structure, open(\"donnees.json\", \"w\"), indent=2)"
+    "json.dump(ma_structure, open(\"donnees.json\", \"w\"), indent=2)\n",
+    "json_depuis_le_fichier = json.load(open(\"donnees.json\", \"r\"))\n",
+    "print(json_depuis_le_fichier[\"stagiaires\"][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "34c479ee",
+   "execution_count": 15,
+   "id": "d784bdc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python objet\n"
+     ]
+    }
+   ],
    "source": [
-    "json_depuis_le_fichier = json.load(open(\"donnees.json\", \"r\"))"
+    "mon_objet_en_chaine = json.dumps(ma_structure)\n",
+    "json_depuis_la_chaine = json.loads(mon_objet_en_chaine)\n",
+    "print(json_depuis_la_chaine[\"nom\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34768898",
+   "id": "3fd09339",
    "metadata": {},
    "outputs": [],
    "source": []
