--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1b72242c",
+   "id": "26d205d5",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d784bdc0",
+   "id": "403bf19d",
    "metadata": {},
    "outputs": [
     {
@@ -53,9 +53,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f7ff60d",
+   "metadata": {},
+   "source": [
+    "# CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd09339",
+   "id": "a261a668",
    "metadata": {},
    "outputs": [],
    "source": []
