--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "26d205d5",
+   "id": "dab2f286",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "403bf19d",
+   "id": "1fdbfbb3",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7ff60d",
+   "id": "58c5be0c",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,10 +63,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a261a668",
+   "id": "dda34de2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
