--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dab2f286",
+   "id": "f6a99530",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1fdbfbb3",
+   "id": "57d0f1d3",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c5be0c",
+   "id": "43c23932",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,12 +63,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda34de2",
+   "id": "4c75e1cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "\n"
+    "\n",
+    "with open('api1.csv', newline='') as csvfile:\n",
+    "    csv_reader = csv.reader(csvfile, delimiter=',', quotechar='\"')\n",
+    "    for row in spamreader:\n",
+    "        print(', '.join(row))"
    ]
   }
  ],
