--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b063c746",
+   "id": "2c25c1fe",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e9614f08",
+   "id": "158c3edf",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6db5c6",
+   "id": "cadd85a4",
    "metadata": {},
    "source": [
     "# CSV"
@@ -62,104 +62,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "171dee96",
+   "execution_count": 21,
+   "id": "6f1cbb16",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Muminov-Ikrom', 'laravel/breeze']\n",
-      "['vercel', 'lensterxyz/lenster']\n",
-      "['salinga', 'salinga/demo-jenkins']\n",
-      "['cloobTech', 'cloobTech/alx-low_level_programming']\n",
-      "['thekopufa', 'thekopufa/Ea0jZkeD9U']\n",
-      "['mojahige', 'mojahige/elm-spa-test']\n",
-      "['mnmbhf3289', 'mnmbhf3289/ntdtv']\n",
-      "['wilhelm-murdoch', 'wilhelm-murdoch/dq']\n",
-      "['dependabot', 'carstenartur/Rocket.Chat.ReactNative']\n",
-      "['bodycohl', 'bodycohl/legs-fit']\n",
-      "['yinuo01', 'adazzle/react-data-grid']\n",
-      "['rko281', 'rko281/Porpoise']\n",
-      "['release-please', 'googleapis/java-secretmanager']\n",
-      "['yakir12', 'yakir12/SkyRoomsGtk']\n",
-      "['LauShingHung', 'ourCodeTherapy/likewise-app-react-firebase']\n",
-      "['Kishoiyan-Charity1', 'akirachix/Red-wings']\n",
-      "['emmahsax', 'dispatchitinc/devise_revocable_session']\n",
-      "['xaviliz', 'Alia-morsi/leakage_removal']\n",
-      "['sonarcloud', 'DSM-DECONHUB/deconhub-server']\n",
-      "['ceriy1st', 'ceriy1st/ceriy1st1V17078']\n",
-      "['mnmbhf3289', 'mnmbhf3289/djy']\n",
-      "['kyma-bot', 'kyma-project/lifecycle-manager']\n",
-      "['inmadv02', 'inmadv02/Netflix']\n",
-      "['LarsDwars', 'legomannetje/Innovum-Git-Course']\n",
-      "['MaryShtayn', 'MaryShtayn/goit-markup-hw-08']\n",
-      "['yeonbok', 'openvinotoolkit/openvino']\n",
-      "['KrasimirDmtr', 'KrasimirDmtr/Programming-Fundamentals-JS-Sept']\n",
-      "['tahaaa12', 'tahaaa12/ping']\n",
-      "['xiuxi', 'xiuxi/java']\n",
-      "['yakir12', 'yakir12/SkyRoomsGtk']\n",
-      "['github-actions', 'RibonDAO/core-api']\n",
-      "['github-actions', 'chekos/spotify-git-scraping']\n",
-      "['JakeBenson', 'fihristorg/fihrist-mss']\n",
-      "['github-actions', 'GabrielMullerDS/GabrielMullerDS']\n",
-      "['rbngzlv', 'nov/rack-locale_memorable']\n",
-      "['esalesg', 'esalesg/product-feed']\n",
-      "['dependabot', 'ernieturner/DefinitelyTyped']\n",
-      "['OxiCuza', 'OxiCuza/oxicuza.github.io']\n",
-      "['yeonbok', 'openvinotoolkit/openvino']\n",
-      "['github-actions', 'brocjad/pub_hofs']\n",
-      "['brollb', 'webgme/webgme-taxonomy']\n",
-      "['im-renpei', 'Ry0/ompl_python_tutorial']\n",
-      "['thekonon', 'thekonon/NJLearner']\n",
-      "['sun9zzang', 'sun9zzang/fastapi_prtc']\n",
-      "['fleef-me', 'fleef-me/TgBackUP']\n",
-      "['Lawsenge', 'Lawsenge/newProject']\n",
-      "['dummdidumm', 'sveltejs/language-tools']\n",
-      "['DenkingOfficial', 'yownas/seed_travel']\n",
-      "['blessing-law', 'blessing-law/alx-low_level_programming']\n",
-      "['fshowalter', 'fshowalter/franksbooklog.com']\n",
-      "['dschmitz89', 'dschmitz89/scipy']\n",
-      "['orangemn6', 'orangemn6/uptime-monitor']\n",
-      "['rohithsprabhu', 'rohithsprabhu/hacktoberfest2021']\n",
-      "['Rs5611', 'Rs5611/KYUSYU']\n",
-      "['limjae', 'limjae/weatherAccuracy']\n",
-      "['kknitteltest', 'kknitteltest/hardhat-smartcontract-lottery-fcc']\n",
-      "['rdstl', 'rdstl/prueba']\n",
-      "['sambarba99', 'sambarba99/spare-time-projects']\n",
-      "['dduta065', 'dduta065/resume-site']\n",
-      "['indianatoms', 'indianatoms/FL-PCAP-Analysis']\n",
-      "['zicklag', 'fishfolks/punchy']\n",
-      "['github-actions', 'Xeruloudon/Xeruloudon']\n",
-      "['joshrdane', 'joshrdane/tere']\n",
-      "['Acatus-dev', 'Unice-SIL/esup-sport']\n",
-      "['berrua', 'alexandresanlim/Badges4-README.md-Profile']\n",
-      "['andyMrtnzP', 'browserless/chrome']\n",
-      "['openshift-ci', 'openshift/openshift-apiserver']\n",
-      "['harryEth', 'magiclabs/example-ethers']\n",
-      "['kchxr1st', 'kchxr1st/kchxr1st4565']\n",
-      "['remyd1', 't1anz0ng/iftree']\n",
-      "['dependabot', 'chimpaji/trpc-prisma-starter']\n",
-      "['delhage', 'delhage/gcp-terraform']\n",
-      "['DoctorLi2042', 'NEST-Protocol/NEST-PVM-Web-User-Interface']\n",
-      "['ph00lt0', 'ph00lt0/blocklist']\n",
-      "['DeVriesMatt', 'MagniViT/MagniViT']\n",
-      "['joivo', 'convictional/trigger-workflow-and-wait']\n",
-      "['t1dmlgus', 't1dmlgus/wanted-pre-onboarding-challenge-be-task-October']\n",
-      "['uftd456', 'uftd456/hu24vr1z9y']\n",
-      "['jessicajaniuk', 'angular/angular']\n",
-      "['Jon83Carvalho', 'Jon83Carvalho/DataAndArt']\n",
-      "['BohdanBodakva', 'BohdanBodakva/web-labs']\n",
-      "['dependabot', 'binden-js/binden']\n",
-      "['marco76tv', 'laraxot/module_theme']\n",
-      "['renovate', 'entur/extime']\n",
-      "['stachada', 'Developer-Y/cs-video-courses']\n",
-      "['uftd111', 'uftd111/t2j4HuFmWq']\n",
-      "['vuminhtoan2001', 'vuminhtoan2001/Hotel-Booking-App']\n",
-      "['wylu', 'wylu/kubeans']\n",
-      "['nikBaben', 'nikBaben/Game-school-project-']\n",
-      "['Pat-Brennan', 'Pat-Brennan/Udemy-Python-Bootcamp']\n"
+      "Muminov-Ikrom\n",
+      "vercel\n",
+      "salinga\n",
+      "cloobTech\n",
+      "thekopufa\n",
+      "mojahige\n",
+      "mnmbhf3289\n",
+      "wilhelm-murdoch\n",
+      "dependabot\n",
+      "bodycohl\n",
+      "yinuo01\n",
+      "rko281\n",
+      "release-please\n",
+      "yakir12\n",
+      "LauShingHung\n",
+      "Kishoiyan-Charity1\n",
+      "emmahsax\n",
+      "xaviliz\n",
+      "sonarcloud\n",
+      "ceriy1st\n",
+      "mnmbhf3289\n",
+      "kyma-bot\n",
+      "inmadv02\n",
+      "LarsDwars\n",
+      "MaryShtayn\n",
+      "yeonbok\n",
+      "KrasimirDmtr\n",
+      "tahaaa12\n",
+      "xiuxi\n",
+      "yakir12\n",
+      "github-actions\n",
+      "github-actions\n",
+      "JakeBenson\n",
+      "github-actions\n",
+      "rbngzlv\n",
+      "esalesg\n",
+      "dependabot\n",
+      "OxiCuza\n",
+      "yeonbok\n",
+      "github-actions\n",
+      "brollb\n",
+      "im-renpei\n",
+      "thekonon\n",
+      "sun9zzang\n",
+      "fleef-me\n",
+      "Lawsenge\n",
+      "dummdidumm\n",
+      "DenkingOfficial\n",
+      "blessing-law\n",
+      "fshowalter\n",
+      "dschmitz89\n",
+      "orangemn6\n",
+      "rohithsprabhu\n",
+      "Rs5611\n",
+      "limjae\n",
+      "kknitteltest\n",
+      "rdstl\n",
+      "sambarba99\n",
+      "dduta065\n",
+      "indianatoms\n",
+      "zicklag\n",
+      "github-actions\n",
+      "joshrdane\n",
+      "Acatus-dev\n",
+      "berrua\n",
+      "andyMrtnzP\n",
+      "openshift-ci\n",
+      "harryEth\n",
+      "kchxr1st\n",
+      "remyd1\n",
+      "dependabot\n",
+      "delhage\n",
+      "DoctorLi2042\n",
+      "ph00lt0\n",
+      "DeVriesMatt\n",
+      "joivo\n",
+      "t1dmlgus\n",
+      "uftd456\n",
+      "jessicajaniuk\n",
+      "Jon83Carvalho\n",
+      "BohdanBodakva\n",
+      "dependabot\n",
+      "marco76tv\n",
+      "renovate\n",
+      "stachada\n",
+      "uftd111\n",
+      "vuminhtoan2001\n",
+      "wylu\n",
+      "nikBaben\n",
+      "Pat-Brennan\n"
      ]
     }
    ],
@@ -167,15 +167,15 @@
     "import csv\n",
     "\n",
     "with open('api1.csv', newline='') as csvfile:\n",
-    "    csv_reader = csv.reader(csvfile, delimiter=',', quotechar='\"')\n",
+    "    csv_reader = csv.DictReader(csvfile, delimiter=',', quotechar='\"')\n",
     "    for row in csv_reader:\n",
-    "        print(row)"
+    "        print(row[\"username\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05460fb7",
+   "id": "bb86e8e4",
    "metadata": {},
    "outputs": [],
    "source": []
