--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2c25c1fe",
+   "id": "30053e54",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "158c3edf",
+   "id": "ad462be5",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cadd85a4",
+   "id": "87b1a4ca",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6f1cbb16",
+   "id": "215af42b",
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +174,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "90e3f3f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"./data_final.csv\", sep=\"\\t\")\n",
+    "print(type(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bb86e8e4",
+   "id": "6fabab79",
    "metadata": {},
    "outputs": [],
    "source": []
